# startup_summaries

./: README.md  app.py  investor_interest_topics.txt  pyproject.toml  summaries.csv
src/: english.py  errors.py  preprocess.py  prompt.py  summarise_single_company.py  summarise_single_document.py
